Closed
Bug 450270
Opened 17 years ago
Closed 17 years ago
NewAPI: Add modal windows support for Qt
Categories
(Core Graveyard :: Embedding: APIs, defect)
Tracking
(Not tracked)
RESOLVED
FIXED
People
(Reporter: pelle.johnsen, Unassigned)
Details
Attachments
(1 file, 1 obsolete file)
|
4.35 KB,
patch
|
mfinkle
:
review+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (Windows; U; Windows NT 6.0; en-US; rv:1.9.0.1) Gecko/2008070208 Firefox/3.0.1
Build Identifier:
Add support for handling modal windows in the Qt part of the New Embedding API. This is needed for making prompts work correctly. Will add patch shortly.
Reproducible: Always
Steps to Reproduce:
1.
2.
3.
| Reporter | ||
Comment 1•17 years ago
|
||
Added patch against hg.mozilla.org/incubator/embedding
| Reporter | ||
Comment 2•17 years ago
|
||
Comment on attachment 333415 [details] [diff] [review]
Patch to add support for modal windows on Qt
mfinkle: would you like to take a quick look at this before I commit?
Attachment #333415 -
Flags: review?(mark.finkle)
| Reporter | ||
Comment 3•17 years ago
|
||
Added updated patch
Attachment #333415 -
Attachment is obsolete: true
Attachment #333776 -
Flags: review?(mark.finkle)
Attachment #333415 -
Flags: review?(mark.finkle)
Comment 4•17 years ago
|
||
Comment on attachment 333776 [details] [diff] [review]
Updated patch, avoid dealing with modal in openWindow
>diff --git a/qt/QMozView.cpp b/qt/QMozView.cpp
>+ void ShowAsModal();
>+ void ExitModal(nsresult result);
Instead of ShowAsModal can we call it StartModal? fits better with ExitModal and gives more context that this is less about showing a window and more about a modal loop.
If you agree, remember to change the other variants too.
r+ either way
Attachment #333776 -
Flags: review?(mark.finkle) → review+
| Reporter | ||
Comment 5•17 years ago
|
||
Pushed with name change ShowAsModal -> StartModal
Status: UNCONFIRMED → RESOLVED
Closed: 17 years ago
Resolution: --- → FIXED
Updated•7 years ago
|
Product: Core → Core Graveyard
You need to log in
before you can comment on or make changes to this bug.
Description
•