Qt: add support for modal windows, rename ShowAsModal -> StartModal, bug 450270